--- a/user-service/public/stripe.html
+++ b/user-service/public/stripe.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="./logo.png">
     <title>Add Payment Method</title>
     <script src="https://js.stripe.com/v3/"></script>
     <style>
